<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/priere_content"
    android:weightSum="100">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/Page_number"
        android:layout_weight="8"
        android:gravity="center"
        android:background="#aabbcc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_xx"
            android:id="@+id/tv_XX"
            android:textColor="@color/primary_text_default_material_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_yy"
            android:id="@+id/tv_YY"
            android:textColor="@color/primary_text_default_material_light"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:id="@+id/primary_content"
        android:background="@color/background_floating_material_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_jumlah"
            android:id="@+id/tv_jumlah"
            android:padding="15dp"
            android:textColor="@color/primary_text_default_material_light"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_arabic_text"
                    android:id="@+id/tv_arabic_text"
                    android:padding="15dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/primary_text_default_material_light"/>

                <Button
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/b_speak"
                    android:background="@drawable/unmute"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_indonesian_text"
                    android:id="@+id/tv_indonesian_text"
                    android:padding="15dp"
                    android:textColor="@color/primary_text_default_material_light"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sanad"
                    android:id="@+id/tv_sanad"
                    android:padding="15dp"
                    android:textColor="@color/primary_text_default_material_light"
                    android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:id="@+id/navigation_button"
        android:background="#aabbcc"
        android:gravity="center|center_horizontal">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/b_left"
            android:background="@drawable/button_left"
            android:layout_marginRight="15dp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/b_right"
            android:background="@drawable/button_right"
            android:layout_marginLeft="15dp" />
    </LinearLayout>
</LinearLayout>